# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: my-check.yml
gendiff/: __init__.py
gendiff/lib/: gendiff.py
gendiff/lib/formatters/: plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: diff_json_json.fixture  diff_yml_json.fixture  diff_yml_plain.fixture  diff_yml_stylish.fixture
