[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Small utility to diff config files"
authors = ["Anton Olenev <a_olenev@mail.ru>"]
packages = [
  { include = "gendiff" },
]


[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

